tests/ui/parser/missing-fn-issue-65381-2.stderr
error: missing `fn` or `struct` for function or struct definition
  --> $DIR/missing-fn-issue-65381-2.rs:1:1
   |
LL | main();
   | ^^^^
   |
help: if you meant to call a macro, try
   |
LL | main!();
   |     +

error: aborting due to 1 previous error

