tests/ui/parser/missing-fn-issue-65381-2.rs
main();
//~^ ERROR missing `fn` or `struct` for function or struct definition
//~| HELP if you meant to call a macro, try
